Improve find a mentor section of applicant docs
It wasn't clear that applicants need to contact a mentor. D:

--- a/home/templates/home/docs/applicant_guide.html
+++ b/home/templates/home/docs/applicant_guide.html
@@ -161,9 +161,9 @@ Applicant Guide | Outreachy Documentation
 <p>Outreachy recommends the following resources for learning about contributing to free and open source software projects:
 <ul>
 	<li><a href="https://opensource.com/resources/what-open-source">"What is open source?"</a> an article by opensource.com</li>
-	<li><a href="https://pragprog.com/book/vbopens/forge-your-future-with-open-source">"Forge Your Future With Open Source"</a>, an introduction book for newcomers</li>
-	<li><a href="https://lab.github.com/">GitHub Lab</a>, a free resource for learning git</li>
-	<li><a href="https://www.freecodecamp.org/">FreeCodeCamp</a>, a free resource for learning programming skills</li>
+	<li><a href="https://pragprog.com/book/vbopens/forge-your-future-with-open-source">"Forge Your Future With Open Source"</a> an introductory book for open source newcomers</li>
+	<li><a href="https://lab.github.com/">GitHub Lab</a> a free resource for learning git</li>
+	<li><a href="https://www.freecodecamp.org/">FreeCodeCamp</a> a free resource for learning programming skills</li>
 	<li><a href="https://up-for-grabs.net">Up for Grabs</a> (unaffiliated with Outreachy) - find projects to volunteer your time with</li>
 </ul>
 </p>
@@ -184,11 +184,9 @@ Applicant Guide | Outreachy Documentation
 
 <p>
 Once your initial application is approved, the contribution period will open.
-The next step
-in the Outreachy application process is to look through the list of
+The next step in the Outreachy application process is to look through the list of
 participating communities and internship projects. Pick one
-or two projects that look interesting to you.  Then you'll
-work with a mentor to start working on a <a href='#make-contributions'>contribution</a> for the project.
+or two projects that look interesting to you.
 </p>
 
 <p>
@@ -202,63 +200,36 @@ and some communities that are accepting one or two interns.
 Their instinct is to apply to the communities that are accepting more interns.
 However, when all the applicants think that way, it means
 projects that are only accepting one intern don't get a lot of
-applicants.
-</p>
-
-<p>
-You should pick a project that looks interesting to you,
-and will help you improve the skills you want to learn.
-Don't pick a project based on the number of interns the community is accepting.
+applicants. It might be better to apply to a community who is accepting a small number of interns.
 </p>
 
 <p>
 Many people get overwhelmed with the list of projects and don't
-know how to choose a project! Our advice is to pick a project
-whose mission resonates with you.
+know how to choose a project! Our advice is to pick a community
+that has a mission that you're passionate about.
 </p>
 
 <p>
-Once you've narrowed down you list of projects,
+Once you've narrowed down your list of projects,
 you can decide whether the project is right for you by:
 </p>
 <ul>
-	<li>
-	Introducing yourself to the project's mentor.
-	Ask questions about the project or anything you're confused about.
-	Discuss the internship tasks or contribution tasks listed in the project details.
-	Outreachy mentors are friendly and welcome your questions!
-	</li>
-	<li>
-	Reading the project's documentation
-	</li>
-	<li>
-	Lurking on the project's chat, forum, or IRC
-	channel (if your project uses IRC and you've
-	never used it before, you can read more <a
-	href="https://wiki.gnome.org/Outreachy/IRC">here</a>)
-	</li>
-	<li>
-	Building any software projects
-	and running them to check out its latest capabilities (the
-	project website usually has the instructions for doing
-	this, but don't hesitate twice to ask the project's
-	mentor or people on the project's chat forums for help
-	if you encounter any problems)
-	</li>
-	<li>
-	Looking at the open issues or feature requests for the project
-	</li>
-	<li>
-	Looking at the recent changes in the project's repository
-	or recent contributions pages.
-	</li>
-	<li>
-	Reading the recent discussion on the project's mailing list or forum.
-	</li>
-	<li>
-	Reading the blogs of the project's mentor and other project contributors.
-	</li>
+	<li>Introducing yourself to the project's mentor via email</li>
+	<li>Joining the project's chat, forums, or mailing list and introducing yourself</li>
+	<li>Using or installing the project</li>
+	<li>Reading the project's documentation</li>
+	<li>Looking at the open issues or feature requests for the project</li>
+	<li><a href="/alums/">Reading Outreachy alums' blogs</a> who worked with that community</li>
 </ul>
+
+<p><b>You'll need to contact the project mentor.</b> All applicants need to be the first one to reach out to mentors. Mentors will not be assigned to you.</p>
+
+<p>
+The mentors listed on the project will be the mentors who you are working with during the internship period.
+Mentors will evaluate applicants on their communication skills and the quality of the contributions they make during the contribution period. They'll pick the strongest applicant as their intern. Therefore, it's important that you reach out to mentors early during the contribution period.</p>
+
+<p>Applicants ask all sorts of questions of their mentors! Mentors are friendly and patient, and it's okay to ask questions multiple times, or multiple times a day! Read the project description, and ask your mentor questions about anything that's unclear. Ask you mentor if you get stuck setting up your contribution environment. Look for a list of project tasks under the 'Project Contribution Information' and ask questions if you have trouble getting started on your contributions. If you're stuck for more than a couple of hours at any time, reach out to your mentor for help.
+</p>
 
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <h2 id='make-contributions'><a href="#make-contributions">Making Contributions</a></h2>
