--- a/home/templates/home/docs/applicant_guide.html
+++ b/home/templates/home/docs/applicant_guide.html
@@ -151,7 +151,7 @@ Applicant Guide | Outreachy Documentation
 	<li><a href="/alums/">Read past Outreachy intern's blogs</a></li>
 	<li><a href="https://medium.freecodecamp.org/get-the-most-out-of-your-outreachy-application-process-937d4a8ab4bf">Get the most out of your Outreachy intern application process</a></li>
 	<li><a href="https://medium.freecodecamp.org/outreachy-what-how-why-4fb60d10a228">How I got into the Outreachy open source internship program</a></li>
-	<li><a href="https://blog.ihsavru.me/node/9">Application tips from an Outreachy intern who just completed their internship</a></li>
+	<li><a href="https://medium.com/@ihsavru/outreachy-the-end-87114b46def4">Application tips from an Outreachy intern who just completed their internship</a></li>
 	<li><a href="http://exploreshaifali.github.io/2015/06/08/getting-into-summer-of-code-programs/">Getting into Summer of Code Programs</a></li>
 	<li><a href="http://www.litacho.com/opw_the_end.html">The end of my internship</a> - note that Outreachy used to be called OPW</li>
 	<li><a href="https://web.archive.org/web/20130410022646/http://anteaya.info/blog/2013/03/29/suggestions-for-gnome-opw-applicants">Suggestions for Outreachy Applicants</a></li>
